--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family: helvetica, arial, sans-serif;
@@ -34,5 +35,24 @@ header nav ul li a{
 }
 h2{
     color: #39a6b2;
+}
+footer{
+    background-color: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+footer h2{
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+footer div{
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+footer a{
+    color: #024e76;
 }
 
