--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+section{
+    padding: 60px;
+}
 body{
     font-family: helvetica, arial, sans-serif;
 }
@@ -55,4 +58,52 @@ footer div{
 footer a{
     color: #024e76;
 }
+.hero {
+        background-image: url("../images/hero-bg.jpg");
+        height: 600px;
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        background-position: center;
+    
+}
+.hero-form{
+    background-color: #fce138;
+    color: #024e76;
+    padding: 20px;
+    width: 500px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 
+}
+.hero-form h3{
+    font-size: 24px;
+    margin: 0px;
+
+}
+.hero-form p{
+    margin: 5px 0 15px 0;
+}
+.form-input{
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.hero-form label{
+    margin: 0 5px;
+}
+.hero-form button{
+    background-color:#024e76;
+    color:#fce138;
+    border:none;
+    padding:10px 20px;
+    font-size:16px;
+}
