--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -29,16 +29,20 @@ header a {
     text-decoration: none;
 }
 header nav{
- 
+    
     margin: 7px 0px;
 }
-header nav ul li{
-    display: inline;
+header nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 header nav ul li a{
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 h2{
     color: #39a6b2;
