--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -51,15 +51,18 @@ footer{
     background-color: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2{
-    display: inline;
+ 
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div{
-    float: right;
+ 
     line-height: 1.5;
     text-align: right;
 }
@@ -68,25 +71,35 @@ footer a{
 }
 .hero {
         background-image: url("../images/hero-bg.jpg");
-        height: 600px;
         background-position: center;
         background-size: cover;
-        position: relative;
         background-position: center;
-    
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+}
+.hero-cta{
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-form h2{
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 .hero-form{
     background-color: #fce138;
     color: #024e76;
     padding: 20px;
-    width: 500px;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
-
+    width: 35%;
+    margin: 3.5%;
 }
 .hero-form h3{
     font-size: 24px;
