--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -128,10 +128,7 @@ footer a{
     padding:10px 20px;
     font-size:16px;
 }
-.intro{
-    text-align: center;
- 
-}
+
 
 .intro p{
     line-height: 1.7;
@@ -139,18 +136,20 @@ footer a{
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
+    text-align: center
 }
 .section-title{
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 
 }
 .primary-border{
@@ -179,10 +178,8 @@ footer a{
     font-size: 38px;
 }
 .trainers{
-    text-align: center;
 }
 .trainer {
-    text-align: center;
     width: 900px;
     margin: 0 auto 30px auto;
     background: #024e76;
@@ -217,10 +214,11 @@ footer a{
 .text-right{
     text-align: right;
 }
-
+.flex-row{
+    display: flex;
+}
 .reach-out{
     background-color: #024e76;
-    text-align: center;
 }
 .reach-out h2{
     color: #fce138;
