--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -40,7 +40,7 @@ header nav ul{
     list-style: none;
 }
 header nav ul li a{
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -77,6 +77,7 @@ footer a{
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        align-items: flex-start;
 }
 .hero-cta{
     width: 35%;
@@ -84,9 +85,9 @@ footer a{
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
-.hero-form h2{
+.hero-cta h2{
     font-style: italic;
     font-size: 55px;
     color: #fce138;
@@ -128,22 +129,8 @@ footer a{
     padding:10px 20px;
     font-size:16px;
 }
-
-
-.intro p{
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
-.steps {
-    background: #fce138;
-    text-align: center
-}
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -157,6 +144,18 @@ footer a{
 }
 .secondary-border{
     border-color: #39a6b2;
+}
+
+.intro p{
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+.steps {
+    background: #fce138;
 }
 .step{
     margin: 50px auto;
@@ -182,12 +181,16 @@ footer a{
 .step-img{
     flex: 1 12%;
     margin-right: 20px;
+}
+.step-img img{
     max-width: 100%;
+}
+.step-text{
+    flex: 12;
 }
 .step-text p{
     color: #39a6b2;
     font-size: 18px;
-    flex: 12;
 }
 .step-text h4{
     font-size: 26px;
@@ -282,4 +285,93 @@ footer a{
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
+  }
+  @media screen and (max-width: 980px) {
+        header{
+            padding-bottom: 0;
+            justify-content: center;
+        }
+        header h1{
+            width: 100%;
+            text-align: center;
+        }
+        header nav ul{
+            margin-top: 20px;
+            width: 100%;
+            justify-content: center;
+        }
+        header nav ul li a{
+            font-size: 20px;
+        }
+        footer h2, footer div{
+            text-align: center;
+            width: 100%;
+        }
+        .hero-cta, .hero-form{
+            width: 100%;
+        }
+        .hero-cta{
+            text-align: center;
+        }
+        .section-title{
+            width: 80%;
+        }
+        .trainer{
+            flex: 0 70%;
+        }
+        .contact-info iframe{
+            flex: 1 100%;
+        }
+      
+  }
+  @media screen and (max-width: 768px) {
+        section{
+            padding: 30px 15px;
+        }
+        .step h3 {
+            flex: 1 100%;
+            text-align: center;
+          }
+        
+          .step-info {
+            flex: 2 100%;
+            text-align: center;
+            justify-content: center;
+          }
+        
+          .step-img {
+            flex: 0 32%;
+            margin-right: 0;
+            margin-top: 15px;
+            margin-bottom: 15px;
+          }
+        
+          .step-text {
+            flex: 100%;  
+          }
+      
+  }
+  @media screen and (max-width: 575px) {
+        .hero-form button{
+            width: 100%;
+        }
+        .section-title{
+            width: 95%;
+        }
+        .intro p{
+            width: 100%;
+        }
+        .trainer{
+            flex: 0 100%;
+        }
+        .contact-info{
+            text-align: center;
+        }
+        .contact-info > *{
+            flex: 0 100%;
+        }
+        .contact-form{
+            order: 3;
+        }
+      
   }
