--- a/assets/css/run-buddy.css
+++ b/assets/css/run-buddy.css
@@ -16,12 +16,21 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
     
 }
 header a {
@@ -43,6 +52,13 @@ header nav ul li a{
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
+}
+header nav ul li a:hover{
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 h2{
     color: #39a6b2;
@@ -78,6 +94,10 @@ footer a{
         justify-content: center;
         flex-wrap: wrap;
         align-items: flex-start;
+        background-image: url("../images/hero-bg.jpg");
+        background-size: cover;
+        background-position: center;
+        background-position: 80%;
 }
 .hero-cta{
     width: 35%;
@@ -91,9 +111,10 @@ footer a{
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-form{
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     color: #024e76;
     padding: 20px;
     border-style: solid;
@@ -101,6 +122,8 @@ footer a{
     border-color: #024e76;
     width: 35%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px ;
 }
 .hero-form h3{
     font-size: 24px;
@@ -118,6 +141,12 @@ footer a{
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, .75);
+}
+.form-input:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 .hero-form label{
     margin: 0 5px;
@@ -128,6 +157,10 @@ footer a{
     border:none;
     padding:10px 20px;
     font-size:16px;
+    border-radius: 15px;
+}
+.hero-form button:hover{
+    background-color: #39a6b2;
 }
 .section-title{
     font-size: 48px;
@@ -161,12 +194,16 @@ footer a{
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
 }
+.step:last-child{
+    border: none;
+}
+
 .step h3{
     color: #024e76;
     font-size: 46px;
@@ -276,6 +313,12 @@ footer a{
       width: 100%;
       margin-bottom: 15px;
       margin-top: 5px;
+      border-radius: 15px;
+      background-color: rgba(255, 255, 255, .75);
+  }
+  .contact-form input:focus, .contact-form textarea:focus{
+      background-color: rgba(255, 255, 255, 1);
+      outline: none;
   }
   .contact-form button{
       width: 100%;
@@ -285,11 +328,17 @@ footer a{
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
+      border-radius: 15px;
+  }
+  .contact-form button:hover{
+      color: #fce138;
+      background: #39a6b2;
   }
   @media screen and (max-width: 980px) {
         header{
             padding-bottom: 0;
             justify-content: center;
+            position: relative;
         }
         header h1{
             width: 100%;
